resolve apis proxy

--- a/todo/public/index.html
+++ b/todo/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href={window.location.origin + '/favicon.ico'} />
+    <link rel="icon" href={process.env.PUBLIC_URL + '/favicon.ico'} />
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
