--- a/todo/public/index.html
+++ b/todo/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href={process.env.PUBLIC_URL + '/favicon.ico'} />
+    <!-- <link rel="icon" href={process.env.PUBLIC_URL + '/favicon.ico'} /> -->
     <link rel="icon" href='../build/favicon.ico' />
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
